refactor[3.0.0-SNAPSHOT]: 合并版本，升级pom文件